--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ h1 {
     color: rgb(255, 255, 255);
 }
 
+#blocker{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+
 section {
     height: 100vh;
 }
