--- a/style.css
+++ b/style.css
@@ -64,13 +64,13 @@ section {
     /* position: absolute; */
     /* top: 1vh;
     right: 1.5vh; */
-    mix-blend-mode: difference;
+    mix-blend-mode: hard-light;
     opacity: 100%;
     width: fit-content;
     height: fit-content;
     pointer-events: auto;
 
-    font-size: 8vh;
+    font-size: 5vh;
     color: white;
 
     transition: opacity 0.25s;
